compiler/testData/cli/jvm/jsr305Strict.out
compiler/testData/cli/jvm/jsr305Usage.kt:2:11: error: null cannot be a value of a non-null type '@EnhancedNullability kotlin/String'.
    a.foo(null)
          ^
COMPILATION_ERROR
